crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__N816_N816.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N816 Variable `mixedCase` in global scope should not be mixedCase
 --> N816.py:7:1
  |
7 | mixedCase = 0
  | ^^^^^^^^^
  |

N816 Variable `_mixedCase` in global scope should not be mixedCase
 --> N816.py:8:1
  |
8 | _mixedCase = 0
  | ^^^^^^^^^^
  |

N816 Variable `mixed_Case` in global scope should not be mixedCase
 --> N816.py:9:1
  |
9 | mixed_Case = 0
  | ^^^^^^^^^^
  |

N816 Variable `tP` in global scope should not be mixedCase
  --> N816.py:15:1
   |
15 | tP = 0
   | ^^
   |

N816 Variable `fN1` in global scope should not be mixedCase
  --> N816.py:17:10
   |
17 |     case fN1 as fN2:  # N816 (both capture and alias)
   |          ^^^
   |

N816 Variable `fN2` in global scope should not be mixedCase
  --> N816.py:17:17
   |
17 |     case fN1 as fN2:  # N816 (both capture and alias)
   |                 ^^^
   |

N816 Variable `fN3` in global scope should not be mixedCase
  --> N816.py:19:23
   |
19 |     case {"key": 1, **fN3}:  # N816 (mapping rest)
   |                       ^^^
   |
