crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__N817_N817.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N817 CamelCase `CaMel` imported as acronym `CM`
 --> N817.py:1:8
  |
1 | import mod.CaMel as CM
  |        ^^^^^^^^^^^^^^^
  |

N817 CamelCase `CamelCase` imported as acronym `CC`
 --> N817.py:2:17
  |
2 | from mod import CamelCase as CC
  |                 ^^^^^^^^^^^^^^^
  |

N817 CamelCase `ElementTree` imported as acronym `ET`
  --> N817.py:10:26
   |
10 | from ..xml.eltree import ElementTree as ET
   |                          ^^^^^^^^^^^^^^^^^
   |
